--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ header{
 }
 
 .bikes-wrapper{
-    margin-top: 2rem;
+    margin: 2rem 2rem;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap:2rem;
@@ -40,7 +40,7 @@ header{
 .bike-wrapper{
     width: 250px;
     height: 350px;
-    background-color: antiquewhite;
+    background-color: rgb(252, 252, 252);
     border: 1px solid rgb(75, 74, 74);
     padding: 1rem;
     border-radius: 1rem;
@@ -55,6 +55,6 @@ header{
 
 .bike-image{
     width: 100%;
-    height: 130px;
+    height: 200px;
     object-fit: cover;
 }
