--- a/styles.css
+++ b/styles.css
@@ -12,9 +12,11 @@ header{
     padding-right: 2rem;
 }
 
+
 .logo{
     font-size: 3rem;
     color: lightgreen;
+    font-style: italic;
 }
 
 .nav{
@@ -50,11 +52,15 @@ header{
 }
 
 .bike-wrapper:hover{
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.4);
 }
 
 .bike-image{
     width: 100%;
     height: 200px;
     object-fit: cover;
+}
+
+.price{
+    color: rgb(4, 94, 4);
 }
