--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ header{
     align-items: center;
     padding-left: 2rem;
     padding-right: 2rem;
+    margin-bottom: 2rem;
 }
 
 
@@ -33,10 +34,11 @@ header{
 }
 
 .bikes-wrapper{
-    margin: 2rem 2rem;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap:2rem;
+    width: 90%;
+    margin: auto;
 }
 
 .bike-wrapper{
@@ -96,5 +98,33 @@ header{
 .info-message{
     font-size: 1.2rem;
     color: rgb(131, 28, 28);
+    margin-top: 2rem;
+}
+
+.form-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+}
+
+.form-container input{
+    width: 70%;
+    max-width: 1000px;
+    padding: 0.5rem 1rem;
+}
+
+.submit-button{
+    width: 180px;
+    height: 40px;
+    margin-top: 1rem;
+    background-color: rgb(75, 74, 74);
+    color: lightgreen;
+    font-size: 1.1rem;
+}
+
+.submit-message{
+    font-size: 1.2rem;
+    color: (4, 94, 4);
     margin-top: 2rem;
 }
